k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neon-casino-service
  namespace: neon-casino
spec:
  type: ClusterIP
  selector:
    app: neon-casino
  ports:
    - name: http
      port: 80
      targetPort: 5000
